# neo

./: .clang-format  .codecov.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile.in  README.md  bootstrap.sh  codecov.yml  configure.ac  setup.sh
.github/workflows/: main.yml  test.yml
Dockerfiles/: .gitignore  Makefile
Dockerfiles/click/: Dockerfile
Dockerfiles/dpdk/: Dockerfile  build-dpdk.sh
Dockerfiles/iptables/: Dockerfile  Makefile  start.sh
Dockerfiles/ipvs/: Dockerfile  start.sh
Dockerfiles/klint-bridge/: Dockerfile
Dockerfiles/klint-faulty-nat/: Dockerfile
Dockerfiles/klint-firewall/: Dockerfile
Dockerfiles/klint-maglev/: Dockerfile
Dockerfiles/klint-nat/: Dockerfile
Dockerfiles/klint-policer/: Dockerfile
Dockerfiles/linux-router/: Dockerfile  start.sh
cmake/: FindBpfObject.cmake  FindLibnet.cmake  FindLibnl.cmake  FindPcapPlusPlus.cmake  FindSpin.cmake  FindTomlPlusPlus.cmake
depends/: PKGBUILD  conanfile.txt  requirements.txt  setup.sh  vcpkg.json  vcpkg.patch
depends/catch2/: PKGBUILD
depends/neo-dev/: PKGBUILD
depends/pcapplusplus/: PKGBUILD
doc/: artifact-evaluation.md  input-api.toml
examples/: .gitignore  Makefile  common.sh  conf_classes.py  config.py  logparser.py  plot.py
examples/00-reverse-path-filtering/: README.md  extract.sh  network.fault.toml  network.toml  run.sh
examples/01-enterprise-network/: .gitignore  confgen.py
examples/01-squid/: network.toml
examples/01-subnet-isolation/: .gitignore  README.md  confgen.py  extract-fault.sh  extract-latencies.sh  extract.sh  run-fault.sh  run.sh
examples/02-firewall-consistency/: .gitignore  README.md  conf_classes.py  confgen.py  extract.sh  lat.csv  run-fault.sh  run.sh  stats.csv
examples/03-load-balancing/: README.md  compare-unopt.txt  confgen.py  extract.sh  lat.csv  network.toml  reset_stats.txt  run.sh  single-run.sh  stats.csv
examples/03-load-balancing.unopt/: confgen.py  lat.csv  run.sh  stats.csv
examples/03-load-banancing/: network.toml
examples/04-squid/: README.md  confgen.py  network.toml  run.sh
examples/05-openflow/: README.md  network.toml  run.sh
examples/06-multi-tenant-datacenter/: README.md  compare-model.inv-1.1-proc.txt  compare-model.inv-1.no-updates.1-proc.txt  confgen.py  extract.sh  lat.csv  run.sh  stats.csv
examples/07-tcp-ports/: README.md  network.toml  run.sh
examples/08-udp-ports/: README.md  network.toml  run.sh
examples/09-icmp-echo/: README.md  network.toml  run.sh
examples/10-http-echo/: network.toml
examples/10-mutlicomm-lb/: confgen.py  run.sh
examples/10-mutliconn-lb/: confgen.py  run.sh
examples/11-docker/: network.toml
examples/11-klint-fw/: network.toml
examples/11-klint-fw-poc/: network.toml  run.sh
examples/12/: confgen.py
examples/12-klint-nat/: network.fault.toml  network.toml  run.sh
examples/13-klint-maglev-lb/: confgen.py  run.sh
examples/14-simple-linux-router/: network.toml  run.sh
examples/15-real-networks/: .gitignore  1.as-103-nodes.txt  README.md  confgen.py  lat.csv  parse-network-dataset.py  prepare-datasets.sh  run.sh  stats.csv  topology.txt
examples/16-klint-lb-fw/: confgen.py  run.sh
examples/17-campus-network/: confgen.py  lat.csv  run.sh  stats.csv
examples/18-fat-tree-datacenter/: confgen.py  lat.csv  run.sh  stats.csv
examples/19-real-networks-firewalls/: confgen.py  firewall_parser.py  run.sh
full-emulation/: .gitignore  common.sh  setup.sh
full-emulation/00-reverse-path-filtering/: .gitignore  confgen.py  network.clab.yml  run.sh  single-run.sh  stats.csv
full-emulation/15-real-networks/: .gitignore  confgen.py  run.sh  single-run.sh  stats.csv
full-emulation/17-campus-network/: confgen.py  run.sh  single-run.sh  stats.csv
scripts/: bootstrap.sh  build-klint-nfs.sh  build.sh  clang_profile.ini  configure.sh  dataparse_script.py  gcc_profile.ini  gdb_root.sh  install.sh  klint-build-nfs.sh  logparser.py  parse-logs.sh  plot-figs.sh  plot.py  prepull.sh  release_profile.ini  run-unopt.sh  style.sh  test.sh  unoptimized.patch
src/: api.cpp  api.hpp  candidates.cpp  candidates.hpp  choices.cpp  choices.hpp  comm.cpp  comm.hpp  config.cpp  config.hpp  config.py  configparser.cpp  configparser.hpp  conn.cpp  conn.hpp  connmatrix.cpp  connmatrix.hpp  connspec.cpp  connspec.hpp  dataparse.py  dockerapi.cpp  dockerapi.hpp  dockernode.hpp  dropdetection.cpp  dropdetection.hpp  dropmon.cpp  dropmon.hpp  droptimeout.cpp  droptimeout.hpp  droptrace.bpf.c  droptrace.cpp  droptrace.h  droptrace.hpp  ecrange.cpp  ecrange.hpp  emu-pkt-key.cpp  emu-pkt-key.hpp  emulation.cpp  emulation.hpp  emulationmgr.cpp  (+58 more)
src/driver/: docker.cpp  docker.hpp  driver.hpp
src/invariant/: conditional.cpp  conditional.hpp  consistency.cpp  consistency.hpp  invariant.cpp  invariant.hpp  loadbalance.cpp  loadbalance.hpp  loop.cpp  loop.hpp  one-request.cpp  one-request.hpp  reachability.cpp  reachability.hpp  reply-reachability.cpp  reply-reachability.hpp  waypoint.cpp  waypoint.hpp
src/lib/: cpptoml.h  dropmon.cpp  dropmon.hpp  fs.cpp  fs.hpp  hash.cpp  hash.hpp  ip.cpp  ip.hpp  logger.cpp  logger.hpp  net.cpp  net.hpp
src/mb-app/: cache-proxy.1.backup  docker.cpp  (+16 more)
test/: CMakeLists.txt  all.sh  astyle.sh  build.sh  codecov.sh.in  dockerapi.cpp  dropmon.cpp  droptrace.cpp  emulation.cpp  filename.sh  interface.cpp  logger.cpp  main.cpp  node.cpp  pre-commit.sh  route.cpp  style.sh  test-interface.cpp  test-node.cpp  test-route.cpp
test/driver/: docker.cpp
test/lib/: fs.cpp  ip.cpp  logger.cpp  test-fs.cpp  test-ip.cpp  test-logger.cpp
test/mb-app/: docker-util.cpp  docker.cpp
test/networks/: 000-test-node.toml  001-test-node.toml  002-test-node.toml  003-test-node.toml  004-test-node.toml  005-test-node.toml  006-test-node.toml  007-test-node.toml  009-test-node.toml  00a-test-node.toml  docker-drop.toml  docker.toml  interface.toml  route.toml
tests/: CMakeLists.txt  dockerapi.cpp  dropmon.cpp  droptrace.cpp  emulation.cpp  logger.cpp  main.cpp  node.cpp  route.cpp
tests/driver/: docker.cpp
tests/networks/: node.toml  route.toml
(+64 files in other folders)
